style: fix align items

--- a/blocks/content/__name/content__name.css
+++ b/blocks/content/__name/content__name.css
@@ -2,3 +2,9 @@
   display: flex;
   align-items: baseline;
 }
+
+@-moz-document url-prefix() {
+  .content__name {
+    align-items: center;
+  }
+}
